--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* Change the background of the entire visible page */
 body {
-    background-color: #f0f0f0; /* Very light grey */
+    background-color: #87ab69; /* pale green */
 }
 
 /* Style for all paragraphs */
 p {
     color: darkgreen;
-    font-size: 16px;
+    font-size: 20px;
     font-family: 'Times New Roman', serif;
 }
 
