--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Change the background of the entire visible page */
 body {
-    background-color: #87ab69; /* pale green */
+    background-color: plae green; /* pale green */
 }
 
 /* Style for all paragraphs */
@@ -13,5 +13,5 @@ p {
 /* Style for the main heading */
 h1 {
     text-align: center; /* Puts the heading in the middle */
-    border: 2px solid orange; /* Adds an orange border around the heading */
+    border: 3px solid orange; /* Adds an orange border around the heading */
     padding: 10px; /* Adds space inside the border */
