--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Change the background of the entire visible page */
 body {
-    background-color: chocolate brown; /* pale green */
+    background-color: brown; /* pale green */
 }
 
 /* Style for all paragraphs */
